[package]
name = "pong_bevy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = "0.17.2"
avian2d = "0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
pedantic =  { level = "deny",priority = -1 }
nursery = { level = "deny", priority = -1 }
# bevy doesn't work with this
needless_pass_by_value = "allow"
unwrap_used = "deny"
