[package]
name = "pong_bevy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
avian2d = "0.4"
bevy = "0.17.2"

[dev-dependencies]
# Speed up builds in dev
bevy = { version = "0.17.2", features = ["dynamic_linking"] }

[lints.clippy]
# bevy doesn't work with this
needless_pass_by_value = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
